--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,8 @@
     background-color: rgb(234, 234, 234);
     background-color: rgb(105, 0, 0);
     background-color: #ffeecd  ;
+    margin: 0;
+    padding: 0;
   }
   
   body {
@@ -36,34 +38,119 @@
   .card-grid {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
   }
   
   .card {
-    align-content: center;
+    width: 139px;
+    height: 238px;
+    background: rgba(255, 255, 255, .53);
+    display: flex;
     align-items: center;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
+    justify-content: center;
+    border-radius: 5px;
+  }
+  .cardImg{
+    width: 125px;
+    height: 216px;
+    background: #000000;
+    border-top: 6px solid rgb(255, 255, 255);
+    border-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     display: flex;
     flex-direction: column;
-    height: 0%;  
+    align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    overflow: hidden;
+
+  } 
+  .cardImg__element{
+    width: 111px;
+    height: 50px;
+    background: transparent;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
-  
-  .card p {
-    background-color: white;
-    flex: 1;
-    font-size: 1.5rem;
+  .cardImg__element--imagen{
+    height: 270px;
+    background: rgb(255, 255, 255);
+    border-radius: 5px;
     margin-top: 5px;
-    padding: 5px 20px 0px 20px;
-    text-align: center;
+    margin-bottom: 20px;
+    display: block;
+    clip-path: polygon(0 31%, 0 0, 100% 0, 100% 81%, 85% 100%, 0 100%, 0 79%, 7% 69%, 7% 53%, 0 45%);
+    position: relative;
+
+  }
+
+  .cardImg__element--imagen img,
+  .cardImg__details--flags img{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+  }
+
+  .cardImg__details{
+    width: 23px;
+    height: 23px;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 6px;
+    font-weight: 900;
+    margin-top: 10px;
+  }
+
+  .cardImg__details--name{
+    width: 87px;
+    padding-top: 5px;
+    /* background: red; */
+  }
+  .cardImg__details--flags{
+    background: rgb(0, 255, 234);
   }
   
-  .card img {
-    width: 100%;
+  .cardImg__name{
+    width: 87px;
+    height: 23px;
+    background: transparent;
+    text-align: start;
   }
+ .imagen__name{
+    width: 87px;
+    height: 23px;
+    position: absolute;
+    color: rgb(255, 255, 255);
+    top: 5px;
+    font-size: 7px;
+    margin-left: 10px;
+    font-weight: 900;
+    /* background: rgb(0, 255, 234); */
+ }
+ .imagen__name--last{
+  top: 15px;
+ }
+ .imagen__name--circle{
+  width: 10px;
+  height: 10px;
+  top: 25px;
+  left: 87px;
+  transform: rotate(-90deg);
+  background: rgb(0, 0, 0);
+  border-radius: 50%;
+  z-index: 2;
+ }
+ .imagen__name--lastRight{
+  width: auto;
+  height: auto;
+  top: 50px;
+  left: 80px;
+  transform: rotate(-90deg);
+ }
